--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://sd.leadactiv.ru
+REACT_APP_BACKEND_URL=http://xn-----7kcwscdioejc9jpc.xn--p1ai
 REACT_APP_PLANS_URL=https://plans.leadactiv.ru/file-store/
